# chlamy-ImPi

./: .gitignore  LICENSE  README.md  journal.md  pyproject.toml
.github/: CODEOWNERS
Notebooks/: Data_exec_2.ipynb  Data_normalization.ipynb  GO_analysis.ipynb  Mixed_model_effects.ipynb
Scripts/: Clusters.py  Data_analysis_func.py  Data_v2.py  Model_checks.py  Outlier_detection_v2.py
chlamy_impi/: NB_db_creation.demo.py  NB_img_processing.demo.py  __init__.py  autogrid_img_processing.demo.py  controls_2.py  controls_384.py  image_processing.demo.py  image_processing.py  interactive.demo.py  light_cuvre.demo.py  parameter_inference.demo.py  paths.py  plans.md  preflight.demo.py  reflection_off_agar_w_blanks.demo.py  run_well_segmentation_preprocessing.py
chlamy_impi/data_exploration/: fv_fm_plots.py  fv_fm_spatial_distribution_plots.py  gaussian_process_outlier_detection.py  image_processing.py  initial_clustering.py  mask_comparison.py  summarise_database_contents.ipynb  time_series_exploration.py  time_series_similarity.py  well_intensity_lineouts.py
chlamy_impi/database_creation/: constants.py  construct_identity_df.py  database_sanity_checks.py  error_correction.py  investigate_meta_df.py  main.py  utils.py
chlamy_impi/error_correction/: plot_measurement_times.py  (+2 more)
data/: download_data.ps1  download_data.sh  download_latest_data.sh  plate_strain_IDs.xlsx
output/: 2023-03-23_3hr_mean_fluor.pkl  WT_set.pkl  intensities_3h.pkl  strain_names.pkl
scripts/: generate_database.sh
tests/: test_feature_extraction.py  test_rotation_correction.py  test_utils.py
(+21 files in other folders)
