[tool.poetry]
name = "chlamy-impi"
version = "0.1.0"
description = "An IMage analysis data PIpeline (IMPI) for analyzing fluorescence in iof Chlamydomonas reinhardtii in 384 well plates and inferring their photosynthetic characteristics."
authors = ["Leron Perez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scikit-image = "^0.21.0"
openpyxl = "^3.1.2"
pandas = "^2.1.0"
streamlit = "^1.26.0"
watchdog = "^3.0.0"
loguru = "^0.7.1"
altair = "^5.2.0"
tqdm = "^4.66.1"
segment-multiwell-plate = {git = "https://github.com/murraycutforth/segment-multiwell-plate"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
